fix(#1592): Fix compiler warnings in validation modules
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>